@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:12:14 brook Exp $
+
+SHA1 (R/roxygen2_6.1.1.tar.gz) = 61b3a143e61ff3c565871e2a3046b46bff032060
+RMD160 (R/roxygen2_6.1.1.tar.gz) = bc423d472fb646b995f4304aa9e1dcb09405b1b1
+SHA512 (R/roxygen2_6.1.1.tar.gz) = 7643237182bf56853e99942f4f1db1b104f9401d4f3340a91be273f5ae50b8f21767e894e69f3a48bd2133afaa43385366db880147b3aa5b4d8feac75b2cefd5
+Size (R/roxygen2_6.1.1.tar.gz) = 178346 bytes
