@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3368 2019/08/09 19:11:22 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3369 2019/08/09 19:12:14 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5491,3 +5491,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-usethis version 1.5.1 [brook 2019-08-09]
 	Added devel/R-rcmdcheck version 1.3.3 [brook 2019-08-09]
 	Added devel/R-pkgload version 1.0.2 [brook 2019-08-09]
+	Added devel/R-roxygen2 version 6.1.1 [brook 2019-08-09]
